external-crates/move/crates/move-compiler/tests/move_2024/typing/clever_assertions_no_annotation.exp
error[E04035]: invalid constant usage in error context
  ┌─ tests/move_2024/typing/clever_assertions_no_annotation.move:5:24
  │
2 │     const X: vector<u8> = b"foo";
  │           - 'X' defined here with no '#[error]' annotation
  ·
5 │         assert!(false, X);
  │                        ^ Invalid use of a non-u64 constant 'X' as error code.
  │
  = Non-u64 constants can only be used as error codes if the '#[error]' attribute is added to them.

error[E04035]: invalid constant usage in error context
  ┌─ tests/move_2024/typing/clever_assertions_no_annotation.move:9:15
  │
2 │     const X: vector<u8> = b"foo";
  │           - 'X' defined here with no '#[error]' annotation
  ·
9 │         abort X
  │               ^ Invalid use of a non-u64 constant 'X' as error code.
  │
  = Non-u64 constants can only be used as error codes if the '#[error]' attribute is added to them.

