external-crates/move/crates/move-compiler/tests/move_2024/typing/clever_assertions_no_annotation.move
module 0x42::m {
    const X: vector<u8> = b"foo";

    fun f() {
        assert!(false, X);
    }

    fun g() {
        abort X
    }
}
